--- a/routing/.env.example
+++ b/routing/.env.example
@@ -1,2 +1,7 @@
 DOUBLEGIS_API_KEY=your_2gis_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+SUPABASE_DB_PASSWORD=aiwilltakeovertheworld
+SUPABASE_DB_HOST=db.forsqzgswpmzpkjmkvlf.supabase.co
+SUPABASE_DB_PORT=5432
+SUPABASE_DB_NAME=postgres
+SUPABASE_DB_USER=postgres
