--- a/routing/requirements.txt
+++ b/routing/requirements.txt
@@ -4,3 +4,6 @@ httpx==0.25.1
 python-dotenv==1.0.0
 pydantic==1.10.13
 google-generativeai==0.3.2
+SQLAlchemy==2.0.25
+asyncpg==0.29.0
+bcrypt==4.1.2
