--- a/routing/.env.example
+++ b/routing/.env.example
@@ -1,2 +1,9 @@
 DOUBLEGIS_API_KEY=your_2gis_api_key_here
 GEMINI_API_KEY=your_gemini_api_key_here
+
+# PostgreSQL Database
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=map_adviser
+DB_USER=postgres
+DB_PASSWORD=your_secure_password_here
