--- a/front/.env
+++ b/front/.env
@@ -1,2 +1,2 @@
-VITE_2GIS_API_KEY=f10bb204-9b14-4e8b-bf5f-f1ce3125464d
-VITE_API_BASE_URL=http://localhost:3000/api
+VITE_2GIS_API_KEY=ed1537b1-4397-4542-9633-97f7585cb789
+VITE_API_BASE_URL=http://localhost:8000
