--- a/core/.env.example
+++ b/core/.env.example
@@ -6,3 +6,12 @@ GEMINI_API_KEY=AIzaSyA-BtPgMjfKY4T2xGL0kMNVxoyUn4HWzF0
 
 # 2GIS API key for places and routing
 GIS_API_KEY=f10bb204-9b14-4e8b-bf5f-f1ce3125464d
+
+# Supabase auth (REST API)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your_supabase_anon_key
+
+# JWT settings
+JWT_SECRET=your_jwt_secret_change_me
+JWT_ALGORITHM=HS256
+JWT_EXPIRATION_HOURS=24
