--- a/front/.env.example
+++ b/front/.env.example
@@ -1,2 +1,4 @@
 VITE_2GIS_API_KEY=your_api_key_here
-VITE_API_BASE_URL=http://localhost:3000/api
+VITE_API_BASE_URL=http://localhost:8001
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
