--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,12 +10,13 @@ services:
   frontend:
     build:
       context: ./front
-      args:
-        # Backend service is reachable by name inside the Docker network
-        VITE_API_BASE_URL: http://backend:8000
-        VITE_WS_BASE_URL: ws://backend:8000
-    env_file:
-      - ./front/.env
+    environment:
+      # Runtime config for nginx-served frontend (env-config.js)
+      API_BASE_URL: /api
+      # Leave empty to auto-derive from browser origin
+      WS_BASE_URL: ""
+      # Set in shell/CI/CD or AWS task definition
+      MAP_API_KEY: ${MAP_API_KEY:-}
     depends_on:
       - backend
     ports:
