--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -3,12 +3,6 @@
 FROM node:20-alpine AS builder
 WORKDIR /app
 
-# Build-time API endpoints (can be overridden via build args)
-ARG VITE_API_BASE_URL=http://localhost:8000
-ARG VITE_WS_BASE_URL=ws://localhost:8000
-ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
-ENV VITE_WS_BASE_URL=$VITE_WS_BASE_URL
-
 COPY package*.json ./
 RUN npm ci
 
@@ -18,6 +12,8 @@ RUN npm run build
 FROM nginx:1.25-alpine AS runner
 WORKDIR /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY docker-entrypoint.d/40-env-config.sh /docker-entrypoint.d/40-env-config.sh
+RUN chmod +x /docker-entrypoint.d/40-env-config.sh
 COPY --from=builder /app/dist ./
 
 EXPOSE 80
